changed prices of items

--- a/index.html
+++ b/index.html
@@ -105,18 +105,18 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
             <button class="w3-button w3-black">Buy now <i class="fa fa-shopping-cart"></i></button>
           </div>
         </div>
-        <p>Pride Watch strap<br><b>$19.99</b></p>
+        <p>Pride Watch strap<br><b>19.99€</b></p>
       </div>
       <div class="w3-container">
         <img src="images/blue-strap.jpeg" style="width:100%">
-        <p>Blue Watch strap<br><b>$20.50</b></p>
+        <p>Blue Watch strap<br><b>20.50€</b></p>
       </div>
     </div>
 
     <div class="w3-col l3 s6">
       <div class="w3-container">
         <img src="images/cartoon-case.jpg" style="width:100%">
-        <p>Mushrooms iPhone case<br><b>$20.50</b></p>
+        <p>Mushrooms iPhone case<br><b>20.50€</b></p>
       </div>
       <div class="w3-container">
         <div class="w3-display-container">
@@ -126,18 +126,18 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
             <button class="w3-button w3-black">Buy now <i class="fa fa-shopping-cart"></i></button>
           </div>
         </div>
-        <p>Hermes iPhone case<br><b class="w3-text-red">$14.99</b></p>
+        <p>Hermes iPhone case<br><b class="w3-text-red">349.99€</b></p>
       </div>
     </div>
 
     <div class="w3-col l3 s6">
       <div class="w3-container">
         <img src="images/leopard-case.jpg" style="width:100%">
-        <p>Leopard iPhone case<br><b>$14.99</b></p>
+        <p>Leopard iPhone case<br><b>14.99€</b></p>
       </div>
       <div class="w3-container">
         <img src="images/magnetic-case.jpeg" style="width:100%">
-        <p>Mag-Safe iPhone case<br><b>$24.99</b></p>
+        <p>Mag-Safe iPhone case<br><b>24.99€</b></p>
       </div>
     </div>
   </div>
