--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
   <div class="w3-display-container w3-container">
     <img src="images/iphone13_cover.jpeg" alt="Jeans" style="width:100%">
     <div class="w3-display-topleft w3-text-white" style="padding:24px 48px">
-      <h1 class="w3-jumbo w3-hide-small">Sevgi AKDENIZ DEV</h1>
+      <h1 class="w3-jumbo w3-hide-small">Sevgi AKDENIZ OK</h1>
       <h1 class="w3-hide-large w3-hide-medium">The best camera is here</h1>
       <h1 class="w3-hide-small">IPHONE 13</h1>
       <p><a href="#jeans" class="w3-button w3-white w3-padding-large w3-large">SHOP NOW</a></p>
