changed 'your' into 'my'

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
 
   <!-- Top header -->
   <header class="w3-container w3-xlarge">
-    <p class="w3-left">Your online store for Apple products & accessories</p>
+    <p class="w3-left">My online store for Apple products & accessories</p>
     <p class="w3-right">
       <i class="fa fa-shopping-cart w3-margin-right"></i>
       <i class="fa fa-search"></i>
