added google optimize in header

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+    <script src="https://www.googleoptimize.com/optimize.js?id=OPT-NDRZGNW"></script>
+    
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
         w[l] = w[l] || [];
