--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <!-- anti-flicker snippet (recommended)  -->
-    <style>.async-hide { opacity: 0 !important} </style>
-    <script>(function(a,s,y,n,c,h,i,d,e){s.className+=' '+y;h.start=1*new Date;
-        h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};
-        (a[n]=a[n]||[]).hide=h;setTimeout(function(){i();h.end=null},c);h.timeout=c;
-    })(window,document.documentElement,'async-hide','dataLayer',4000,
-        {'GTM-MFXF9NV':true});</script>
+<!--    &lt;!&ndash; anti-flicker snippet (recommended)  &ndash;&gt;-->
+<!--    <style>.async-hide { opacity: 0 !important} </style>-->
+<!--    <script>(function(a,s,y,n,c,h,i,d,e){s.className+=' '+y;h.start=1*new Date;-->
+<!--        h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};-->
+<!--        (a[n]=a[n]||[]).hide=h;setTimeout(function(){i();h.end=null},c);h.timeout=c;-->
+<!--    })(window,document.documentElement,'async-hide','dataLayer',4000,-->
+<!--        {'GTM-MFXF9NV':true});</script>-->
 
     <script src="https://www.googleoptimize.com/optimize.js?id=OPT-NDRZGNW"></script>
 
